fix(modal): remove minimum height on small screens

--- a/core/scss/components/modal.scss
+++ b/core/scss/components/modal.scss
@@ -7,6 +7,7 @@
 @import '../settings/buttons';
 @import '../settings/colors';
 @import '../settings/fonts';
+@import '../settings/media';
 @import '../settings/modal';
 @import '../tools/mixins/core';
 @import '../tools/mixins/flex';
@@ -203,6 +204,13 @@
           }
         }
       }
+
+      @media #{$v-medium-down} {
+        .#{$modal__class}__content {
+          min-height: auto
+        }
+      }
+
     }
 
     &.#{$modal__class}--medium,
@@ -229,6 +237,12 @@
           $min-height: $modal__height--medium
         );
       }
+
+      @media #{$v-medium-down} {
+        .#{$modal__class}__content {
+          min-height: auto
+        }
+      }
     }
 
     &.#{$modal__class}--small {
@@ -254,6 +268,12 @@
           $width: $modal__width--small,
           $min-height: $modal__height--small
         );
+      }
+
+      @media #{$v-small-only} {
+        .#{$modal__class}__content {
+          min-height: auto
+        }
       }
     }
 
